src/NavBarScrolling/NavBarScrolling.css
#NavBarScrolling {
    font-family: 'Open Sans', sans-serif;

    width: 100%;
    background-color: white;

    /* TBD: May change later with background image */
    /* When Nav. Bar overlays main content, it hides content behind it*/
    /* background-color: white; */

    /* Allows flexible positioning without using 'float' or 'positioning' */
    display: flex;

    /* Evenly spaces out the Title & Links */
    justify-content: space-between;

    /* Ensures the Title & Links are centered vertically and horizontally */
    /* in their own position */
    align-items: center;

    /* 
    0px     = Pixels to the right
    10px    = Pixels to downward
    5px     = Blur Radius Effect
    -5px    = Spread Radius
                - Making it negative made the blur smaller, thus
                  we bring it downwards 10px to only show on the bottom
                  border
     */
    box-shadow: 0px 10px 5px -5px lightgrey;

    /* Adding more white space above and below the title & links */
    padding-top: 15px;
    padding-bottom: 15px;

    /*  Makes the Nav. Bar stick to the top of the webpage 
        the entire way down
     */
    position: fixed;
}

/* Provides space for the title on the left */
#navbarscrolling-title {
    margin-left: 60px;
    font-size: small;
}

#navbarscrolling-title > h1 {
    /* Adjust Thickness of Title */
    font-weight: 100;
}

/* Provides space to the right of the links */
#navbarscrolling-links {
    /* Makes space between each link */
    margin-right: 30px;
}

#navbarscrolling-links > li {
    /* Makes each Link on the same line */
    display: inline;

    /* Makes space between each link */
    margin-right: 30px;
}

#menu-links, .mobile-navbar {
    display: none;
}

.is-mobile-view {
    display: inline;
}

/* Hovering over Mobile Nav. Bar will show a different color */
.mobile-navbar li:hover {
    background-color: lightgrey;
}

/* When the user is on mobile
            or
    decreases width of website,
    it'll hide the expanded NavBarScrolling
*/
@media screen and (max-width: 800px) {
    #navbarscrolling-links {
        display: none;
    }

    #NavBarScrolling {
        /* Center Title + Menu Icon */
        justify-content: center;
    }

    #navbarscrolling-title {
        /* Earlier we added 30px to the margin-left */
        /* Now, we're removing it to display title */
        /* in the center. */
        margin-left: 0px;
    }

    /* Mobile NavBar look */
    .mobile-navbar {
        position: absolute;
        top: 102px;
        right: 0px;
        background-color: white;
        width: 100%;
        height: 92%;
        box-shadow: 0px 10px 5px -5px lightgrey;
    }

    /*  Used for clicking the Menu Icon to switch between showing & not showing the
        Mobile Nav. Bar */
    .show-navbar {
        display: block;
    }

    /*  Used to display the Mobile Nav. Bar links line by line vertically so that
        Computer Nav. Bar can be horizontal (inline) */
    .is-mobile-view {
        display: block;
    }
}

